--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -53,7 +53,7 @@
                     <b><a href="#container">Karaf Container</a></b>
                     <ul>
                         <li><a href="#container-schedule">Schedule</a></li>
-                        <li><a href="#container-404">4.0.4</a></li>
+                        <li><a href="#container-405">4.0.5</a></li>
                         <li><a href="#container-306">3.0.6</a></li>
                     </ul>
                 </li>
@@ -77,13 +77,15 @@
                     <b><a href="#decanter">Karaf Decanter</a></b>
                     <ul>
                         <li><a href="#decanter-schedule">Schedule</a></li>
-                        <li><a href="#decanter-101">1.0.1</a></li>
+                        <li><a href="#decanter-110">1.1.0</a></li>
                     </ul>
                 </li>
                 <li><b><a href="archives.html">Archives</a></b></li>
             </ul>
         </div>
         <div id="content">
+            <h2>Downloading</h2>
+            You should <a href="#verify">verify the integrity</a> of the download files using provided signatures.
             <h2 id="container">Karaf Container</h2>
             <h3 id="container-schedule">Schedule</h3>
             <table border="1" with="90%">
@@ -137,9 +139,9 @@
                     <td>5</td>
                     <td>7 / 8</td>
                     <td>Stable</td>
-                    <td>4.0.4</td>
                     <td>4.0.5</td>
-                    <td>18/4/16</td>
+                    <td>4.0.6</td>
+                    <td>18/6/16</td>
                 </tr>
                 <tr>
                     <td>4.1.x</td>
@@ -151,17 +153,21 @@
                     <td>6/16</td>
                 </tr>
             </table>
-            <h3 id="container-404">Karaf Container 4.0.4</h3>
+            <h3 id="container-405">Karaf Container 4.0.5</h3>
             <ul>
-                <li>Binary Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/4.0.4/apache-karaf-4.0.4.tar.gz">tar.gz</a> |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.4/apache-karaf-4.0.4.zip">zip</a>]
+                <li>Binary Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.5/apache-karaf-4.0.5.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.5/apache-karaf-4.0.5.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.5/apache-karaf-4.0.5.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/4.0.5/apache-karaf-4.0.5.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/4.0.4/apache-karaf-4.0.4-src.tar.gz">tar.gz</a>
-                    | <a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.4/apache-karaf-4.0.4-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.5/apache-karaf-4.0.5-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.5/apache-karaf-4.0.5-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/4.0.5/apache-karaf-4.0.5-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
-                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334047')">Release Notes</a></li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334629')">Release Notes</a></li>
                 <li>Documentation [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/latest/')">online</a>
                     | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/4_x.html">html</a> | <a
                             href="http://www.apache.org/dyn/closer.lua/karaf/documentation/4_x.pdf">pdf</a>]
@@ -169,13 +175,17 @@
             </ul>
             <h3 id="container-306">Karaf Container 3.0.6</h3>
             <ul>
-                <li>Binary Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6.tar.gz">tar.gz</a> |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6.zip">zip</a>]
+                <li>Binary Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz">tar.gz</a>
-                    | <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.6/apache-karaf-3.0.6-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a></li>
                 <li>Documentation [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/latest-3/')">online</a>
@@ -216,7 +226,7 @@
                     <td>Maintenance</td>
                     <td>3.0.3</td>
                     <td>3.0.4</td>
-                    <td>7/5/16</td>
+                    <td>5/16</td>
                 </tr>
                 <tr>
                     <td>4.0.x</td>
@@ -224,16 +234,17 @@
                     <td>Stable</td>
                     <td>4.0.0</td>
                     <td>4.0.1</td>
-                    <td>7/5/16</td>
+                    <td>5/16</td>
                 </tr>
             </table>
             <h3 id="cellar-400">Karaf Cellar 4.0.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz">tar.gz</a>
-                    |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12329385')">Release Notes</a></li>
                 <li>Documentation [<a
@@ -245,10 +256,11 @@
             <h3 id="cellar-303">Karaf Cellar 3.0.3</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.tar.gz">tar.gz</a>
-                    |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cellar/3.0.3/apache-karaf-cellar-3.0.3-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332043')">Release Notes</a></li>
                 <li>Documentation [<a
@@ -288,10 +300,11 @@
             <h3 id="cave-400">Karaf Cave 4.0.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cave_installation.html')">Installation Instructions</a></li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz">tar.gz</a>
-                    |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332260')">Release Notes</a></li>
                 <li>Documentation [<a
@@ -303,10 +316,11 @@
             <h3 id="cave-300">Karaf Cave 3.0.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cave_installation.html')">Installation Instructions</a></li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz">tar.gz</a>
-                    |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12327169')">Release Notes</a></li>
                 <li>Documentation [<a
@@ -330,26 +344,36 @@
                     <td>1.0.x</td>
                     <td>2.x / 3.x / 4.x</td>
                     <td>Stable</td>
-                    <td>1.0.1</td>
                     <td>1.1.0</td>
-                    <td>18/4/16</td>
+                    <td>1.1.1</td>
+                    <td>6/16</td>
                 </tr>
             </table>
-            <h3 id="decanter-101">Karaf Decanter 1.0.1</h3>
+            <h3 id="decanter-110">Karaf Decanter 1.1.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
-                <li>Source Distribution [<a
-                        href="http://www.apache.org/dyn/closer.lua/karaf/decanter/1.0.1/apache-karaf-decanter-1.0.1-src.tar.gz">tar.gz</a>
-                    |
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/1.0.1/apache-karaf-decanter-1.0.1-src.zip">zip</a>]
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.tar.gz">tar.gz</a> [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.tar.gz.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.tar.gz.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.zip">zip</a> [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.zip.asc">PGP</a>] [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.zip.md5">MD5</a>] [<a href="http://www.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
                 </li>
-                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333858')">Release Notes</a></li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334862')">Release Notes</a></li>
                 <li>Documentation [<a
                         href="javascript:var w = window.open('http://karaf.apache.org/manual/decanter/latest-1/')">online</a>
                     | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.html">html</a> | <a
                             href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.pdf">pdf</a>]
                 </li>
             </ul>
+            <h2 id="verify">Verify the integrity of the files</h2>
+            It is essential that you verify the integrity of the downloaded files using the PGP or MD5 signatures.<br/><br/>
+            The PGP signatures can be verified using PGP or GPG. First download the <a href="http://www.apache.org/dist/karaf/KEYS">KEYS</a> as well
+            as the <code>asc</code> signature file for the relevant file. Make sure you get these files from the <a href="http://www.apache.org/dist/karaf">main distribution directory</a>,
+            rather than from a mirror. Then verify the signatures using:<br/>
+            <code>
+                % gpg --import KEYS<br/>
+                % gpg --verify apache-karaf-*.tar.gz.asc apache-karaf-*.tar.gz<br/>
+            </code>
         </div>
     </div>
     <div class="body--container container-fluid "></div>
