Publish Container 3.0.7 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1749333 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,21 @@
         <div id="content">
             <h2 id="2016">2016</h2>
             <p style="font-size:11px">
+                    <b>Karaf Container 3.0.7 has been released! (20/6/16)</b><br/>
+                    This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.<br/>
+                    <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334639')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
+		    <b>Karaf Decanter 1.1.0 has been released! (26/4/16)</b><br/>
+                    This is a new major release of Apache Karaf Decanter, starting the 1.1.x serie. It includes lot of new features and improvements.
+                    <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334862')">Release Notes</a></p>
+            </p>
+            <p style="font-size:11px">
+		    <b>Karaf Container 4.0.5 has been released! (21/4/16)</b><br/>
+                    This is an update patch for Apache Karaf Container 4.0.x series, containing many bug fixes, dependency updates, and improvements.
+                    <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334629')">Release Notes</a></p>
+            </p>
+            <p style="font-size:11px">
                     <b>Karaf Container 3.0.6 has been released: (17/2/16)</b><br/>
                     This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.<br/>
                     <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a> 
