--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -56,6 +56,7 @@
                         <li><a href="#container-403">4.0.3</a></li>
                         <li><a href="#container-402">4.0.2</a></li>
                         <li><a href="#container-401">4.0.1</a></li>
+                        <li><a href="#container-306">3.0.6</a></li>
                         <li><a href="#container-305">3.0.5</a></li>
                         <li><a href="#container-304">3.0.4</a></li>
                         <li><a href="#container-303">3.0.3</a></li>
@@ -173,6 +174,18 @@
                     | <a href="http://archive.apache.org/dist/karaf/4.0.0/apache-karaf-4.0.0-src.zip">zip</a>]
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332045')">Release Notes</a></li>
+            </ul>
+            <h3 id="container-306">Karaf Container 3.0.6</h3>
+            <ul>
+                <li>Binary Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.tar.gz">tar.gz</a> |
+                    <a href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.zip">zip</a>]
+                </li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.tar.gz">tar.gz</a>
+                    | <a href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a></li>
             </ul>
             <h3 id="container-305">Karaf Container 3.0.5</h3>
             <ul>
