--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,22 @@
 
                                 <div class="banner--text">
                                     <div class="container-fluid">
+                                        <b>Karaf Container 3.0.7 has been released! (20/6/16)</b><br/>
+                                        This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.
+                                    </div>
+                                </div>
+                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334639')">Release Notes</a></p>
+                            </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                                <br/>
+
+                                <div class="banner--text">
+                                    <div class="container-fluid">
                                         <b>Karaf Decanter 1.1.0 has been released! (26/4/16)</b><br/>
                                         This is a new major release of Apache Karaf Decanter, starting the 1.1.x serie. It includes lot of new features and improvements.
                                     </div>
@@ -247,23 +263,6 @@
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333858')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Container 4.0.3 has been released! (10/11/15)</b><br/>
-                                        This is an update patch for Apache Karaf 4.0.x, containing many bug fixes,
-                                        dependency updates, and improvements.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333640')">Release Notes</a></p>
                             </div>
                         </center>
                     </div>
