Announce Cellar 4.0.1 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1753109 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -78,6 +78,7 @@
                 <li>
                     <b><a href="#cellar">Karaf Cellar</a></b>
                     <ul>
+                        <li><a href="#cellar-400">4.0.0</a></li>
                         <li><a href="#cellar-302">3.0.2</a></li>
                         <li><a href="#cellar-301">3.0.1</a></li>
                         <li><a href="#cellar-300">3.0.0</a></li>
@@ -380,6 +381,16 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12328245')">Release Notes</a></li>
             </ul>
             <h2 id="cellar">Karaf Cellar</h2>
+            <h3 id="cellar-400">Karaf Cellar 4.0.0</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a></li>
+            </ul>
             <h3 id="cellar-302">Karaf Cellar 3.0.2</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_install.html')">Installation Instructions</a></li>
