--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -120,6 +120,21 @@
             <section class="hero--banner">
                 <div class="slider single-item">
                     <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
+					<b>Karaf Cellar 4.0.1 has been released! (17/7/16)</b><br/>
+					This is a maintenance release on the Cellar 4.x serie including bug fixes and couple of new features.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+  		   <div>
                         <center>
                             <div class="banner--text">
                                 <br/>
@@ -146,7 +161,7 @@
                                         This is a new major release of Apache Karaf Decanter, starting the 1.1.x serie. It includes lot of new features and improvements.
                                     </div>
                                 </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+                                <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334862')">Release Notes</a></p>
                             </div>
                         </center>
@@ -246,23 +261,6 @@
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334047')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Decanter 1.0.1 has been released! (16/11/15)</b><br/>
-                                        This is a fix version on the 1.x series. It also brings new features like the
-                                        file collector.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333858')">Release Notes</a></p>
                             </div>
                         </center>
                     </div>
