Update Java version for Karaf container 3.x serie
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1755474 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -128,7 +128,7 @@
                 <tr>
                     <td>3.0.x</td>
                     <td>5</td>
-                    <td>6 / 7 / 8</td>
+                    <td>6 (up to Karaf 3.0.5) / 7 / 8</td>
                     <td>Maintenance</td>
                     <td>3.0.7</td>
                     <td></td>
