Use svg instead of png for the karaf logo / apache feather
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1756880 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -38,7 +38,7 @@
                         <a href="community.html">Community</a>
                     </li>
                     <li class="navbar-link">
-                        <a href="http://archive.apache.org"><img src="images/apache-feather-tm.png" width="45px"/></a>
+                        <a href="http://archive.apache.org"><img src="images/apache-feather-tm.svg"/></a>
                     </li>
                 </ul>
             </div>
