--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -56,6 +56,7 @@
                         <li><a href="#container-403">4.0.3</a></li>
                         <li><a href="#container-402">4.0.2</a></li>
                         <li><a href="#container-401">4.0.1</a></li>
+                        <li><a href="#container-307">3.0.7</a></li>
                         <li><a href="#container-306">3.0.6</a></li>
                         <li><a href="#container-305">3.0.5</a></li>
                         <li><a href="#container-304">3.0.4</a></li>
@@ -100,6 +101,7 @@
                 <li>
                     <b><a href="#decanter">Karaf Decanter</a></b>
                     <ul>
+                        <li><a href="#decanter-110">1.1.0</a></li>
                         <li><a href="#decanter-101">1.0.1</a></li>
                         <li><a href="#decanter-100">1.0.0</a></li>
                     </ul>
@@ -175,6 +177,18 @@
                     | <a href="http://archive.apache.org/dist/karaf/4.0.0/apache-karaf-4.0.0-src.zip">zip</a>]
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332045')">Release Notes</a></li>
+            </ul>
+            <h3 id="container-307">Karaf Container 3.0.7</h3>
+            <ul>
+                <li>Binary Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7.tar.gz">tar.gz</a> |
+                    <a href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7.zip">zip</a>]
+                </li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7-src.tar.gz">tar.gz</a>
+                    | <a href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335948')">Release Notes</a></li>
             </ul>
             <h3 id="container-306">Karaf Container 3.0.6</h3>
             <ul>
@@ -463,6 +477,16 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12317874')">Release Notes</a></li>
             </ul>
             <h2 id="decanter">Karaf Decanter</h2>
+            <h3 id="decanter-110">Karaf Decanter 1.1.0</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/decanter/1.1.0/apache-karaf-decanter-1.1.0-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335659')">Release Notes</a></li>
+            </ul>
             <h3 id="decanter-101">Karaf Decanter 1.0.1</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
