--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,16 @@
         <div id="content">
             <h2 id="2016">2016</h2>
             <p style="font-size:11px">
+                    <b>Karaf Decanter 1.2.0 has been released! (19/8/16)</b><br/>
+                    Apache Karaf Decanter 1.2.0 is a major new Decanter release, providing lot of new features (new collectors, new appenders) and bug fixes.
+                    <a href="javascript:var w = window.open('decanter_installation.html')">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335659')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
+                    <b>Karaf Container 3.0.8 has been released! (11/8/16)</b><br/>
+                    This is an update patch for Apache Karaf 3.0.x, containing many bug fixes, dependency updates, and some improvements.
+                    <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335948')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
 		    <b>Karaf Cellar 4.0.1 has been released! (17/7/16)</b><br/>
 		    This is a maintenance release on the Cellar 4.x serie including bug fixes and couple of new features.
 		    <a href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a>
