Use https to access KEYS file
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1757405 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -367,7 +367,7 @@
             </ul>
             <h2 id="verify">Verify the integrity of the files</h2>
             It is essential that you verify the integrity of the downloaded files using the PGP or MD5 signatures.<br/><br/>
-            The PGP signatures can be verified using PGP or GPG. First download the <a href="http://www.apache.org/dist/karaf/KEYS">KEYS</a> as well
+            The PGP signatures can be verified using PGP or GPG. First download the <a href="https://www.apache.org/dist/karaf/KEYS">KEYS</a> as well
             as the <code>asc</code> signature file for the relevant file. Make sure you get these files from the <a href="http://www.apache.org/dist/karaf">main distribution directory</a>,
             rather than from a mirror. Then verify the signatures using, for instance:<br/>
             <code>
