Add Karaf Container 4.0.6 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1757965 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Container 4.0.6 has been released! (27/8/16)</b><br/>
+                                        This is an update patch for Apache Karaf 4.0.x, containing many bug fixes, dependency updates, and improvements.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335477')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Decanter 1.2.0 has been released! (19/8/16)</b><br/>
                                         Apache Karaf Decanter 1.2.0 is a major new Decanter release, providing lot of new features (new collectors, new appenders) and bug fixes.
 				   </div>
@@ -275,22 +290,6 @@
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12329877')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Container 4.0.4 has been released! (13/1/16)</b><br/>
-                                        This is an update patch for Apache Karaf Container 4.0.x series, containing many bug fixes, dependency updates, and improvements.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334047')">Release Notes</a></p>
                             </div>
                         </center>
                     </div>
