--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -80,6 +80,7 @@
                 <li>
                     <b><a href="#cellar">Karaf Cellar</a></b>
                     <ul>
+                        <li><a href="#cellar-401">4.0.1</a></li>
                         <li><a href="#cellar-400">4.0.0</a></li>
                         <li><a href="#cellar-302">3.0.2</a></li>
                         <li><a href="#cellar-301">3.0.1</a></li>
@@ -412,6 +413,16 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12328245')">Release Notes</a></li>
             </ul>
             <h2 id="cellar">Karaf Cellar</h2>
+            <h3 id="cellar-401">Karaf Cellar 4.0.1</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.1-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.1-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a></li>
+            </ul>
             <h3 id="cellar-400">Karaf Cellar 4.0.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
