--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Cellar 4.0.2 has been released! (19/9/16)</b><br/>
+                                        Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12337886')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Container 4.0.6 has been released! (27/8/16)</b><br/>
                                         This is an update patch for Apache Karaf 4.0.x, containing many bug fixes, dependency updates, and improvements.
 				   </div>
