--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,11 @@
         <div id="content">
             <h2 id="2016">2016</h2>
             <p style="font-size:11px">
+                    <b>Karaf Cellar 4.0.2 has been released! (19/9/16)</b><br/>
+                    Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
+                    <a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12337886')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
                     <b>Karaf Container 4.0.6 has been released! (27/8/16)</b><br/>
                     This is an update patch for Apache Karaf 4.0.x, containing many bug fixes, dependency updates, and improvements.
                     <a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335477')">Release Notes</a> 
