Add Karaf Container 4.0.7 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1762335 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Container 4.0.7 has been released! (25/9/16)</b><br/>
+                                        This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338147')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Cellar 4.0.2 has been released! (19/9/16)</b><br/>
                                         Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
 				   </div>
@@ -289,22 +304,6 @@
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?version=12332989&projectId=12311140')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Container 2.3.12 has been released! (25/1/16)</b><br/>
-                                        <b>WARNING</b>: this is the last release on the 2.3.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12329877')">Release Notes</a></p>
                             </div>
                         </center>
                     </div>
