--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -81,6 +81,7 @@
                 <li>
                     <b><a href="#cellar">Karaf Cellar</a></b>
                     <ul>
+                        <li><a href="#cellar-402">4.0.2</a></li>
                         <li><a href="#cellar-401">4.0.1</a></li>
                         <li><a href="#cellar-400">4.0.0</a></li>
                         <li><a href="#cellar-302">3.0.2</a></li>
@@ -430,13 +431,23 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12328245')">Release Notes</a></li>
             </ul>
             <h2 id="cellar">Karaf Cellar</h2>
+            <h3 id="cellar-402">Karaf Cellar 4.0.2</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/cellar/4.0.2/apache-karaf-cellar-4.0.2-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/cellar/4.0.2/apache-karaf-cellar-4.0.2-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12337886')">Release Notes</a></li>
+            </ul>
             <h3 id="cellar-401">Karaf Cellar 4.0.1</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
                 <li>Source Distribution [<a
-                        href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.1-src.tar.gz">tar.gz</a>
+                        href="http://archive.apache.org/dist/karaf/cellar/4.0.1/apache-karaf-cellar-4.0.1-src.tar.gz">tar.gz</a>
                     |
-                    <a href="http://archive.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.1-src.zip">zip</a>]
+                    <a href="http://archive.apache.org/dist/karaf/cellar/4.0.1/apache-karaf-cellar-4.0.1-src.zip">zip</a>]
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a></li>
             </ul>
