--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,11 @@
         <div id="content">
             <h2 id="2016">2016</h2>
             <p style="font-size:11px">
+                    <b>Karaf Cellar 4.0.3 has been released! (31/10/16)</b><br/>
+                    Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
+                    <a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338324')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
                     <b>Karaf Container 4.0.7 has been released! (25/9/16)</b><br/>
                     This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
                     <a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338147')">Release Notes</a> 
