Publish Container 4.0.8 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1774993 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -52,6 +52,7 @@
                 <li>
                     <b><a href="#container">Karaf Container</a></b>
                     <ul>
+                        <li><a href="#container-407">4.0.7</a></li>
                         <li><a href="#container-406">4.0.6</a></li>
                         <li><a href="#container-405">4.0.5</a></li>
                         <li><a href="#container-404">4.0.4</a></li>
@@ -114,6 +115,22 @@
         </div>
         <div id="content">
             <h2 id="container">Karaf Container</h2>
+            <h3 id="container-407">Karaf Container 4.0.7</h3>
+            <ul>
+                <li>Binary Distribution
+                    <ul>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7.zip.sha1">SHA1</a>]</li>
+                    </ul>
+                </li>
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.0.7/apache-karaf-4.0.7-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338147')">Release Notes</a></li>
+            </ul>
             <h3 id="container-406">Karaf Container 4.0.6</h3>
             <ul>
                 <li>Binary Distribution
