--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Container 4.0.8 has been released! (18/12/16)</b><br/>
+                                        This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338273')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Cellar 4.0.3 has been released! (31/10/16)</b><br/>
                                         Apache Karaf Cellar 4.0.3 is a maintenance release on the Cellar 4.x serie including important bug fixes.
 				   </div>
@@ -269,56 +284,6 @@
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
                                     &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334629')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Container 3.0.6 has been released! (17/2/16)</b><br/>
-                                        This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>The Karaf team is proud to announce the launch of our brand new website! (4/2/16)</b><br/>
-                                        After weeks of work, we are delighted to officially announce the launch of our new website.
-                                        Our goal is to provide a clear and up to date message about Apache Karaf, with a modern
-                                        look and feel.<br/><br/>
-                                        We hope you like it. For any questions, suggestions, feedbacks, or comments please send an e-mail
-                                        to the <a href="community.html">mailing list</a> !
-                                    </div>
-                                </div>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Container 2.4.4 has been released! (25/1/16)</b><br/>
-                                        <b>WARNING</b>: this is the last release on the 2.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?version=12332989&projectId=12311140')">Release Notes</a></p>
                             </div>
                         </center>
                     </div>
