[KARAF-4894] Add security advisories in the documentation section of the website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1781227 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -68,6 +68,7 @@
                     </ul>
                 </li>
                 <li><b><a href="#decanter">Karaf Decanter</a></b></li>
+                <li><b><a href=#security">Security Advisories</a></b></li>
                 <li><b><a href="#other">Other Resources</a></b>
                     <ul>
                         <li><a href="#articles">Articles</a></li>
@@ -98,6 +99,10 @@
             <ul>
                 <li><h3>Karaf Decanter 1.x [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/decanter/latest-1/')">online</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.html">html</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.pdf">pdf</a>]</h3></li>
                 </ul>
+        <h2 id="security">Security Advisories</h2>
+           <ul>
+                <li><a href="security/cve-2016-8750.txt">CVE-2016-8750 Apache Karaf's LDAPLoginModule is vulnerable to LDAP injection</a></li>
+           </ul> 
         <h2 id="other">Other Resources</h2>
         <h3 id="articles">Articles</h3>
         <ul>
