Fix erroneous " in the security link on documentation page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1781231 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -68,7 +68,7 @@
                     </ul>
                 </li>
                 <li><b><a href="#decanter">Karaf Decanter</a></b></li>
-                <li><b><a href=#security">Security Advisories</a></b></li>
+                <li><b><a href="#security">Security Advisories</a></b></li>
                 <li><b><a href="#other">Other Resources</a></b>
                     <ul>
                         <li><a href="#articles">Articles</a></li>
