Publish Karaf 4.1.1 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1789892 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Container 4.1.1 has been released! (31/03/17)</b><br/>
+                                        This is an update release on the Apache Karaf 4.1.x series, bringing lot of bug fixes and updates.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12339244')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Container 4.1.0 has been released! (04/02/17)</b><br/>
                                         Apache Karaf 4.1.0 is the first release of the new 4.1.x serie. It brings lot of new features (new shell console, improvements of the Karaf Features system, better Maven artifacts resolution, improved web container, ...).
 				   </div>
