--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -52,6 +52,7 @@
                 <li>
                     <b><a href="#container">Karaf Container</a></b>
                     <ul>
+                        <li><a href="#container-410">4.1.0</a></li>
                         <li><a href="#container-407">4.0.7</a></li>
                         <li><a href="#container-406">4.0.6</a></li>
                         <li><a href="#container-405">4.0.5</a></li>
@@ -115,6 +116,22 @@
         </div>
         <div id="content">
             <h2 id="container">Karaf Container</h2>
+            <h3 id="container-410">Karaf Container 4.1.0</h3>
+            <ul>
+                <li>Binary Distribution
+                    <ul>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0.zip.sha1">SHA1</a>]</li>
+                    </ul>
+                </li>
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.0/apache-karaf-4.1.0-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332799')">Release Notes</a></li>
+            </ul>
             <h3 id="container-407">Karaf Container 4.0.7</h3>
             <ul>
                 <li>Binary Distribution
