Publish Cellar 4.0.4 and 4.1.0 releases
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1795396 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,36 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Cellar 4.0.4 has been released! (15/5/17)</b><br/>
+                                        Apache Karaf Cellar 4.0.4 is a maintenance release on the Cellar 4.x serie including important bug fixes.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338929')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
+					<b>Karaf Cellar 4.1.0 has been released! (15/5/17)</b><br/>
+                                        Apache Karaf Cellar 4.1.0 is the first release in the Cellar 4.1.x serie, fully compatible with Karaf 4.1.x and providing important improvements and bug fixes.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340376')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Container 4.0.9 has been released! (10/04/17)</b><br/>
                                         This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
 				   </div>
