--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -62,7 +62,8 @@
                     <b><a href="#cellar">Karaf Cellar</a></b>
                     <ul>
                         <li><a href="#cellar-schedule">Schedule</a></li>
-                        <li><a href="#cellar-403">4.0.3</a></li>
+                        <li><a href="#cellar-410">4.1.0</a></li>
+                        <li><a href="#cellar-404">4.0.4</a></li>
                         <li><a href="#cellar-303">3.0.3</a></li>
                     </ul>
                 </li>
@@ -258,16 +259,32 @@
                     <td>03/17</td>
                 </tr>
             </table>
-            <h3 id="cellar-403">Karaf Cellar 4.0.3</h3>
+            <h3 id="cellar-410">Karaf Cellar 4.1.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
                 <li>Source Distribution
                     <ul>
-                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.tar.gz.sha1">SHA1</a>]</li>
-                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.3/apache-karaf-cellar-4.0.3-src.zip.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.zip.sha1">SHA1</a>]</li>
                     </ul>
                 </li>
-                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338324')">Release Notes</a></li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340376')">Release Notes</a></li>
+                <li>Documentation [<a
+                        href="javascript:var w = window.open('http://karaf.apache.org/manual/cellar/latest-4/')">online</a>
+                    | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/cellar/4_x.html">html</a> | <a
+                            href="http://www.apache.org/dyn/closer.lua/karaf/documentation/cellar/4_x.pdf">pdf</a>]
+                </li>
+            </ul>
+            <h3 id="cellar-403">Karaf Cellar 4.0.4</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution
+                    <ul>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz.sha1">SHA1</a>]</li>
+                        <li><a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.zip.sha1">SHA1</a>]</li>
+                    </ul>
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338929')">Release Notes</a></li>
                 <li>Documentation [<a
                         href="javascript:var w = window.open('http://karaf.apache.org/manual/cellar/latest-4/')">online</a>
                     | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/cellar/4_x.html">html</a> | <a
