--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,16 @@
         </div>
         <div id="content">
             <h2 id="2017">2017</h2>
+            <p style="font-size:11px">
+                    <b>Karaf Cellar 4.1.0 has been released! (15/5/17)</b><br/>
+                    Apache Karaf Cellar 4.1.0 is the first release on the Cellar 4.1.x serie, fully compatible with Karaf 4.1.x and bringing important improvements and bug fixes.
+                    <a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340376')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
+                    <b>Karaf Cellar 4.0.3 has been released! (31/10/16)</b><br/>
+                    Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
+                    <a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338929')">Release Notes</a> 
+            </p>
             <p style=font-size:11px">
 	    	<b>Karaf Container 4.0.9 has been released! (10/04/17)</b><br/>
                 This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
